@@ -14,7 +14,7 @@ use if "$]" >= 5.022, experimental => 're_strict';
 no if "$]" >= 5.031009, feature => 'indirect';
 no if "$]" >= 5.033001, feature => 'multidimensional';
 no if "$]" >= 5.033006, feature => 'bareword_filehandles';
-use JSON::Schema::Modern::Utilities qw(is_type E A assert_keyword_type);
+use JSON::Schema::Modern::Utilities qw(is_type E A assert_keyword_type abort);
 use Feature::Compat::Try;
 use namespace::clean;
 
@@ -146,7 +146,7 @@ sub _traverse_keyword_format ($self, $schema, $state) {
 }
 
 sub _eval_keyword_format ($self, $data, $schema, $state) {
-  return E($state, 'unimplemented format "%s"', $schema->{format})
+  abort($state, 'unimplemented format "%s"', $schema->{format})
     if $schema->{format} eq 'iri-reference' or $schema->{format} eq 'uri-template';
 
   try {
