@@ -1,6 +1,7 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - make "unimplemented format" errors more visible
 
 0.539     2022-01-06 04:07:20Z
           - updated error message for the "type" keyword to include the actual
